# cpputils

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  cmakelists.txt
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/: cmakelists.txt  cpputils.hpp  datetime.hpp  file.hpp  sleep.hpp  string.hpp
include/console/: _init.hpp  anim.hpp  color.hpp  cursor.hpp  other.hpp  prompt.hpp  size.hpp
include/cpputils/: cpputils.hpp
src/: datetime.cpp  file.cpp  sleep.cpp  string.cpp
src/console/: anim.cpp  color.cpp  cursor.cpp  other.cpp  prompt.cpp  size.cpp
test/: CMakeLists.txt
test/source/: cpputils_test.cpp
